--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -4,6 +4,7 @@ jobs:
  Explore-GitHub-Actions:
    runs-on: ubuntu-latest
    steps:
+      uses: actions/checkout@v3 
     - run: npm ci
     - run: npm test
     - run: echo "Good job!"
