--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "testc":"jest --coverage"
+    "testc": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/schl0014/nodeRepo#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.2",
+    "node": "^19.4.0"
   },
   "devDependencies": {
     "jest": "^29.0.3"
