--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,15 @@
-name: GitHub Actions Demo
+name: Github Actions Demo
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Explore-Github-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉Good job!"
+      - run: echo "Good job!"
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: npm ci
+      - run: npm test
+      - name: Lint Action
+        uses: wearerequired/lint-action@v2.3.0
+        with:
+          prettier: true
