--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node": "^19.4.0"
   },
   "devDependencies": {
-    "jest": "^29.0.3"
+    "eslint": "^8.32.0",
+    "jest": "^29.0.3",
+    "prettier": "2.8.3"
   }
 }
