--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,3 +13,6 @@ jobs:
         uses: wearerequired/lint-action@v2.3.0
         with:
           prettier: true
+          - name: Codacy Analysis CLI
+  uses: codacy/codacy-analysis-cli-action@v4.2.0
+
